logs/dag_id=0_Employee_Sync/run_id=manual__2023-03-16T18:30:03.808108+00:00/task_id=db_setup/attempt=1.log
[2023-03-16T18:30:04.610+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:30:03.808108+00:00 [queued]>
[2023-03-16T18:30:04.617+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:30:03.808108+00:00 [queued]>
[2023-03-16T18:30:04.618+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:30:04.619+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-03-16T18:30:04.619+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-03-16T18:30:04.629+0000] {taskinstance.py:1383} INFO - Executing <Task(_PythonDecoratedOperator): db_setup> on 2023-03-16 18:30:03.808108+00:00
[2023-03-16T18:30:04.636+0000] {standard_task_runner.py:55} INFO - Started process 44508 to run task
[2023-03-16T18:30:04.640+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', '0_Employee_Sync', 'db_setup', 'manual__2023-03-16T18:30:03.808108+00:00', '--job-id', '56', '--raw', '--subdir', 'DAGS_FOLDER/test_dag.py', '--cfg-path', '/tmp/tmpw5rou0_t']
[2023-03-16T18:30:04.642+0000] {standard_task_runner.py:83} INFO - Job 56: Subtask db_setup
[2023-03-16T18:30:04.734+0000] {task_command.py:376} INFO - Running <TaskInstance: 0_Employee_Sync.db_setup manual__2023-03-16T18:30:03.808108+00:00 [running]> on host 9fe6516b8a01
[2023-03-16T18:30:04.797+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=0_Employee_Sync
AIRFLOW_CTX_TASK_ID=db_setup
AIRFLOW_CTX_EXECUTION_DATE=2023-03-16T18:30:03.808108+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-16T18:30:03.808108+00:00
[2023-03-16T18:30:04.799+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 188, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/test_dag.py", line 97, in db_setup
    )""")
psycopg2.errors.SyntaxError: syntax error at or near "email"
LINE 6:         email  VARCHAR(255)   NOT NULL
                ^

[2023-03-16T18:30:04.809+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=0_Employee_Sync, task_id=db_setup, execution_date=20230316T183003, start_date=20230316T183004, end_date=20230316T183004
[2023-03-16T18:30:04.817+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 56 for task db_setup (syntax error at or near "email"
LINE 6:         email  VARCHAR(255)   NOT NULL
                ^
; 44508)
[2023-03-16T18:30:04.852+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-03-16T18:30:04.883+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
